fixed mining chart overflow issue

--- a/client/src/components/Chart/Chart.css
+++ b/client/src/components/Chart/Chart.css
@@ -1,3 +1,7 @@
 thead{
     font-size: 13px;
 }
+
+.chart {
+    overflow-x: scroll;
+}
